@@ -7,12 +7,12 @@ dnl version info
 m4_define([xfce4_timer_version], [0.5.1])
 
 dnl init autoconf
-AC_INIT([xfce4-timer], [xfce4_timer_version], [kieroglu@math.washington.edu])
+AC_INIT([xfce4-timer-plugin], [xfce4_timer_version], [kieroglu@math.washington.edu])
 AC_PREREQ([2.50])
 
 dnl init automake
 XFCE4_TIMER_VERSION=xfce4_timer_version
-AM_INIT_AUTOMAKE([xfce4-timer], [$XFCE4_TIMER_VERSION])
+AM_INIT_AUTOMAKE([xfce4-timer-plugin], [$XFCE4_TIMER_VERSION])
 AM_CONFIG_HEADER([config.h])
 AM_MAINTAINER_MODE
 
@@ -27,7 +27,7 @@ dnl check for standard header files
 AC_HEADER_STDC
 
 dnl Check for i18n support
-XDT_I18N([cs eu fr hu ja pl ru tr])
+XDT_I18N([@LINGUAS@])
 
 dnl required
 XDT_CHECK_PACKAGE([GTHREAD], [gthread-2.0], [2.4.0])
