@@ -1,0 +1,2 @@
+# set of available languages (in alphabetic order)
+cs eu fr hu ja pl ru tr
